[workspace]

members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/jo12bar/rogulike-tut-rs"
authors = ["Johann M. Barnard <johann.b@telus.net>"]
license = "MIT"

[workspace.dependencies]
rltk = { version = "0.8.7", features = ["specs", "threaded"] }
specs = { version = "0.18.0", features = ["derive"] }

[package]
name = "roguelike-tut"
description = "My implementation of the roguelike game described in Herbert Wolverson's \"Roguelike Tutorial - In Rust\""

version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[features]
# Enable to view things like enemies, unrevealed tiles, and items from afar.
debug-map-view = []

[dependencies]
color-eyre = "0.6.2"
num_enum = "0.5.11"
rltk.workspace = true
rustc-hash = "1.1.0"
specs.workspace = true
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.39"
